@@ -18,6 +18,7 @@ struct CreateMovieParameters
 
 extern char *recent_files[];
 extern char *recent_lua[];
+extern char *recent_movie[];
 extern HWND pwindow;
 
 void HideFWindow(int h);
